[package]
name = "cursive_calendar_view"
version = "0.6.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
description = "A basic calendar view implementation for cursive."
repository = "https://github.com/BonsaiDen/cursive_calendar_view.git"
readme = "README.md"
keywords = ["cursive", "ncurses", "TUI", "UI", "calendar"]
categories = ["command-line-interface", "gui"]
license = "MIT/Apache-2.0"

[dependencies]
cursive = { version = "0.14", default-features = false }
chrono = "0.4"

[dev-dependencies]
rand = "0.7"
lazy_static = "1.2"
cursive = "0.14"
