[package]
name = "cursive_calendar_view"
version = "0.9.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>", "Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A basic calendar view implementation for cursive."
repository = "https://github.com/BonsaiDen/cursive_calendar_view.git"
readme = "README.md"
keywords = ["cursive", "ncurses", "TUI", "UI", "calendar"]
categories = ["command-line-interface", "gui"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
cursive_core = "0.4"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
lazy_static = "1.2"
cursive = "0.21"
